--- a/about.html
+++ b/about.html
@@ -488,7 +488,7 @@
                     Contact Me
                 </h2>
 
-                <form name="contact" method="POST" action="/success.html" data-netlify="true" netlify-honeypot="bot-field" class="max-w-2xl">
+                <form id="contact-form" name="contact" method="POST" action="/success.html" data-netlify="true" netlify-honeypot="bot-field" class="max-w-2xl">
                     <input type="hidden" name="form-name" value="contact">
                     <p class="hidden">
                         <label>Don't fill this out: <input name="bot-field"></label>
