--- a/about.html
+++ b/about.html
@@ -488,7 +488,7 @@
                     Contact Me
                 </h2>
 
-                <form id="contact-form" name="contact" method="POST" action="/success.html" data-netlify="true" netlify-honeypot="bot-field" class="max-w-2xl">
+                <form id="contact-form" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" class="max-w-2xl">
                     <input type="hidden" name="form-name" value="contact">
                     <p class="hidden">
                         <label>Don't fill this out: <input name="bot-field"></label>
@@ -515,11 +515,37 @@
                         <textarea name="message" rows="4" required
                                   class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-primary focus:border-transparent"></textarea>
                     </div>
-                    <button type="submit"
+                    <button type="submit" id="submit-btn"
                             class="px-6 py-3 bg-primary text-white font-medium rounded-lg hover:bg-blue-800 transition">
                         Send Message
                     </button>
                 </form>
+                <script>
+                    document.getElementById('contact-form').addEventListener('submit', async function(e) {
+                        e.preventDefault();
+                        const form = e.target;
+                        const btn = document.getElementById('submit-btn');
+                        btn.textContent = 'Sending...';
+                        btn.disabled = true;
+
+                        try {
+                            const response = await fetch('/', {
+                                method: 'POST',
+                                headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+                                body: new URLSearchParams(new FormData(form)).toString()
+                            });
+                            if (response.ok) {
+                                window.location.href = '/success.html';
+                            } else {
+                                throw new Error('Form submission failed');
+                            }
+                        } catch (error) {
+                            alert('메시지 전송에 실패했습니다. 다시 시도해주세요.');
+                            btn.textContent = 'Send Message';
+                            btn.disabled = false;
+                        }
+                    });
+                </script>
             </section>
 
         </div>
